--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "to-do-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": ".",
   "browserslist": [
     ">0.2%",
     "not dead",
