--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": ".",
+  "homepage": "http://dfurzikova.github.io/to-do-react/",
   "browserslist": [
     ">0.2%",
     "not dead",
